# ghilli-tokenizer

./: .gitignore  HOW_IT_WORKS.md  LICENSE  README.md  extract_corpus.py  pyproject.toml  requirements.txt
data/weights/ta/: ghilli-ta-bpe-16k.json  ghilli-ta-bpe-32k.json  ghilli-ta-unigram-16k.json  ghilli-ta-unigram-32k.json  ghilli-ta-unigram-48k.json
ghilli/: __init__.py  tokenizer.py
ghilli-docs/: .cursorrules  GHILLI_PROJECT_REFERENCE.md
ghilli/algorithms/: base.py  gpe.py  unigram.py
ghilli/pretokenizer/: grapheme.py
pipeline/: config.yaml  pipeline.py
pipeline/stages/: clean.py  extract.py  train.py
playground/: app.py  requirements.txt
tests/: test_gpe.py
tests/fixtures/: sample_ta.txt
