[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghilli"
version = "0.1.0"
description = "Grapheme-aware tokenizer for Indian Abugida scripts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["nlp", "tokenizer", "tamil", "indic", "abugida", "bpe", "grapheme"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tokenizers>=0.15.0",
    "grapheme>=0.6.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/manoj-makkuboy/ghilli-tokenizer"
Repository = "https://github.com/manoj-makkuboy/ghilli-tokenizer"
Playground = "https://ghilli-tokenizer.streamlit.app/"

[tool.setuptools.packages.find]
include = ["ghilli*"]
